/*
 * $Id: ChangeLog,v 1.550 2008-10-27 13:49:09 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-10-27 07:47 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_radio.prg
    * Added ::OnDblClick and ::OnRClick funcionality.

2008-10-26 21:26 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/c_winapimisc.c
    ! fixed to run with newer harbour and xharbour versions

2008-10-24 18:23 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_form.prg
    * Fixed back color's brush destruction for MDICLIENT forms.

2008-10-23 21:39 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_window.ch
    ! Fixed PARENT definition on DECLARE WINDOW command.
  * include/oohg.h
  * source/c_windows.c
  * source/h_form.prg
    ! Fixed MDICLIENT assignment.
    * Moved TForm specific code from c_windows.c to h_form.prg .
    * Removed duplicated form unregistration at form release.
    ! Fixed error report when trying to activate an inexistent window.

2008-10-22 01:48 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_radio.prg
    ! Fixed TABSTOP when value is zero.
  * include/i_frame.ch
  * source/h_frame.prg
    - NOTABSTOP clause added (FRAME is always NOTABSTOP).
  * source/c_windows.c
    * Added call and nest count on WndProc processing.
  * source/h_form.prg
    * Unregister window when it's released.
  * source/h_windows.prg
    * Some message names description added.

2008-10-05 10:32 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * doc/classes.txt
  * source/c_controlmisc.c
  * source/common_make.bat
  * source/h_controlmisc.prg
  * source/h_form.prg
  + source/h_tooltip.prg
  * source/h_windows.prg
  * source/makelib_mingw.bat
    + ToolTip control added (management control).

2008-10-04 12:02 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg