@@ -1,11 +1,15 @@
 /*
- * $Id: ChangeLog,v 1.550 2008-10-27 13:49:09 guerra000 Exp $
+ * $Id: ChangeLog,v 1.551 2008-10-29 15:29:01 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2008-10-27 09:11 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_winapimisc.c
+    ! Fixed HB_FHANDLE for older xHarbour versions.
 
 2008-10-27 07:47 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_radio.prg
